# RetroAdventureCreator

./: .gitignore  Changelog.md  README.md
doc/: dataScheme.drawio  db.xlsx
doc/clients/diagrams/: database.drawio
src/Editor/: RetroAdventureCreator.sln
src/Editor/RetroAdventureCreator.Core/: AssemblyInfo.cs  RetroAdventureCreator.Core.csproj  dependencies.txt
src/Editor/RetroAdventureCreator.Core/Extensions/: LinqExtensions.cs  NumberExtensions.cs  ObjectExtensions.cs
src/Editor/RetroAdventureCreator.Core/Helpers/: EnsureHelpers.cs
src/Editor/RetroAdventureCreator.Core/Infrastructure/: Constants.cs
src/Editor/RetroAdventureCreator.Core/Models/: GameComponentKeyModel.cs  GameComponentPointerModel.cs  GameComponentsIndexes.cs  GameComponentsPointers.cs  GameComponentsPointersModel.cs  InputCommandsSerializerArgumentsModel.cs  (+4 more)
src/Editor/RetroAdventureCreator.Test/: RetroAdventureCreator.Test.csproj
src/RacWebAssembly/: CMakeLists.txt  README.md
src/RacWebAssembly/.devcontainer/: dockerfile
src/RacWebAssembly/src/: hello_owl.c  main-h  main.cpp  test.cpp  test.h  text.h
src/RacZx48/: .editorconfig  Makefile  Readme.md  memory_report.sh  zpragma.inc
src/RacZx48/.devcontainer/: devcontainer.json
src/RacZx48/src/: globals.c  globals.h  headers.h  main.c  main.c.lis  main.h  main_1.c  screen.asm  screen.asm.lis  screen.h  test1.c
src/RetroAdventureCreator/: RetroAdventureCreator.sln
src/RetroAdventureCreator/RetroAdventureCreator.Core/: RetroAdventureCreator.Core.csproj
src/RetroAdventureCreator/RetroAdventureCreator.Infrastructure.Game/: Class1.cs
src/RetroAdventureCreator/RetroAdventureCreator.Test/: RetroAdventureCreator.Test.csproj
(+177 files in other folders)
